[project]
name = "fastbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-search-imagesearch>=2.0.1",
    "fastai>=2.0.0",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "nbdev>=0.2.12",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.1",
]
